--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sidharth",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
